# linkedin-mcp-server

./: .gitignore  DEPLOYMENT_AZURE_FUNCTIONS.md  LINKEDIN_PERMISSIONS_SETUP.md  MIGRATION-NOTES.md  README-azure.md  README.md  azure-deploy.sh  azure_functions_adapter.py  function_app.py  host.json  pyproject.toml  requirements.txt
linkedin_mcp_server/: __init__.py  cli.py  cli_main.py  exceptions.py  linkedin_auth.py  server.py
linkedin_mcp_server/config/: loaders.py  schema.py
linkedin_mcp_server/tools/: company.py  job.py  person.py
